--- a/style.css
+++ b/style.css
@@ -66,10 +66,10 @@ body {
      margin: 25%;
 }
 
-/* .mainPage img {
+.mainPage img {
     max-width: 100%;
     z-index: 1;
-} */
+}
 
 .mainPage .home img:hover {
     color: red;
