--- a/style.css
+++ b/style.css
@@ -193,6 +193,10 @@ button:hover, button:active, button:checked {
     animation-duration: 30s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
+	-webkit-animation-name: rotate;
+	-webkit-animation-duration: 30s;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-timing-function: linear;
 }
 @keyframes rotate {
     0%{
